--- a/static/style/debating.css
+++ b/static/style/debating.css
@@ -26,6 +26,16 @@ h2 {
     max-width: 700px;
 }
 
+.post_point_section{
+    background-color: rgb(240,240,240);
+    padding: 15px;
+}
+
+.post_point_section textarea{
+    width: 500px;
+    height: 100px;
+}
+
 .point_section {
     background-color: rgb(255,255,255);
 }
@@ -83,6 +93,7 @@ h2 {
 
 .point_contents {
     max-width: 600px;
+    min-height: 40px;
 }
 .seperator {
     height: 1px;
